--- a/start.html
+++ b/start.html
@@ -22,7 +22,7 @@
 
     <img
       src="./image.webp"
-      alt="C'est l'image de ceux ci ou cela"
+      alt="C'est l'image d'un chat"
       width="250px"
       height="250px"
     />
