--- a/start.html
+++ b/start.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <meta name="author" content="John Doe" />
+    <!-- SEO  -->
+    <meta name="description" content="description " />
+    <meta name="keywords" content="Lorem, Ipsum, JavaScript, 300 keywords" />
+
     <title>Document</title>
   </head>
   <body>
@@ -20,11 +26,52 @@
       quae sunt voluptatum debitis nisi deserunt perspiciatis laudantium.
     </p>
 
+    <hr />
     <img
       src="./image.webp"
       alt="C'est l'image d'un chat"
       width="250px"
       height="250px"
     />
+    <hr />
+    <h2>Les liste à puces</h2>
+    <h3>Ordonnées, imbriquées, nested</h3>
+    <ol>
+      <li>A</li>
+      <li>B</li>
+      <li>
+        C
+        <ol>
+          <li>D</li>
+          <li>E</li>
+          <li>F</li>
+        </ol>
+      </li>
+    </ol>
+    <h3>Unordered, imbriquées, nested</h3>
+    <ul>
+      <li>A</li>
+      <li>B</li>
+      <li>
+        C
+        <ul>
+          <li>D</li>
+          <li>E</li>
+          <li>
+            F
+            <ul>
+              <li>3</li>
+              <li>4</li>
+            </ul>
+          </li>
+        </ul>
+      </li>
+    </ul>
+    <hr />
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. <b>Quos</b>,
+      cupiditate tempora commodi minima sapiente <strong>ipsum</strong>. Iste
+      nesciunt <u>eius nulla commodi</u> repellendus. Sequi, possimus?
+    </p>
   </body>
 </html>
