--- a/form.html
+++ b/form.html
@@ -7,17 +7,19 @@
   </head>
   <body>
     <form action="">
+      <!-- form, declare l'ouverture d'un formulaire -->
       <fieldset>
+        <!-- fieldset, classe les type de champs selon sens de son contenu -->
         <legend>Premier exercice html: le formulaire</legend>
+        <!-- legend, le titre du fieldset -->
         <input type="text" value="" placeholder="Prénom" /><br />
-        <input
-          type="password"
-          value=""
-          placeholder="mot de passe"
-          required
-        /><br />
+        <input type="password" value="" placeholder="mot de passe" required />
+        <!-- type password, les caracteres sont masqués  -->
+        <!-- [!] REQUIRED, champs obligatoire  -->
+        <br />
         <input type="email" value="" placeholder="email" /> <br />
         <input type="submit" value="ENVOYER" />
+        <!-- bouton pour soumettre l'ensemble des inputs dans le formulaire  -->
       </fieldset>
     </form>
   </body>
